added basic front-end

--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -13,15 +13,7 @@
   </head>
   <body>
     <%- include('partials/header.ejs') %>
-    <div class="title">
-      <h1>ECE199R: Web App Project</h1>
-    </div>
-    <main>
-      <div class="hero">
-        <img id="mapua-logo" src="mapua.png" alt="mapua-logo" />
-        <h1>Item Receipt Confirmation</h1>
-      </div>
-    </main>
+    <h1>This is Submit</h1>
     <%- include('partials/footer.ejs') %>
   </body>
 </html>
