--- a/public/styles.css
+++ b/public/styles.css
@@ -97,7 +97,9 @@ main {
 }
 
 .hero h1 {
+  color: #94192f;
   font-size: 5rem;
+  font-weight: 500;
   text-align: center;
 }
 
@@ -106,6 +108,7 @@ main {
 }
 
 /* FORMS */
+
 form {
   background-color: white;
   border-radius: 1em;
@@ -113,6 +116,19 @@ form {
 
 .forms-container {
   padding: 2em;
+  display: flex;
+  flex-direction: column;
+}
+
+.forms-container h1 {
+  font-size: 1rem;
+  padding: 0.5em;
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .forms-title {
@@ -135,9 +151,8 @@ form {
 input[type="text"],
 input[type="password"] {
   width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
+  padding: 10px 0 10px 5px;
+  margin: 8px 0 8px 8px;
   border: 1px solid #ccc;
 }
 
@@ -147,10 +162,10 @@ button {
   background-color: #94192f;
   color: #fcc403;
   padding: 14px 20px;
-  margin: 8px 0;
+  margin: 8px 0 0 0;
   border: none;
   cursor: pointer;
-  width: 30%;
+  width: 40%;
   align-self: center;
 }
 
