--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,23 +19,25 @@
     <main>
       <form action="/login" method="post">
         <div class="forms-container">
-          <label for="username"><b>Username:</b></label>
-          <input
-            type="text"
-            placeholder="Enter Username"
-            name="username"
-            required
-          />
+          <div class="flex">
+            <label for="username"><b>Username:</b></label>
+            <input
+              type="text"
+              placeholder=" Username"
+              name="username"
+              required
+            />
+          </div>
+          <div class="flex">
+            <label for="password"><b>Password:</b></label>
 
-          <label for="password"><b>Password:</b></label>
-
-          <input
-            type="password"
-            placeholder="Enter Password"
-            name="password"
-            required
-          />
-
+            <input
+              type="password"
+              placeholder=" Password"
+              name="password"
+              required
+            />
+          </div>
           <button type="submit">Login</button>
         </div>
       </form>
