--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,9 @@
 <nav>
   <div class="nav-links">
-    <a target="_blank" href="https://www.mapua.edu.ph/" class="mapua"
-      >Mapua Univerity</a
-    >
+    <a href="/" class="mapua">Mapua Univerity</a>
     <ul class="links-container">
-      <li><a href="">Sign Up</a></li>
-      <li><a href="">Login</a></li>
+      <li><a href="/signup">Sign Up</a></li>
+      <li><a href="/login">Login</a></li>
     </ul>
   </div>
 </nav>
