--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <nav>
   <div class="nav-links">
-    <a href="/" class="mapua">Mapua Univerity</a>
+    <a href="/" class="mapua">Map&uacutea University</a>
     <ul class="links-container">
       <li><a href="/signup">Sign Up</a></li>
       <li><a href="/login">Login</a></li>
