--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,27 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ECE199R Web App</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&family=Roboto:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="shortcut icon" href="mapua.ico" type="image/x-icon" />
-  </head>
+  <%- include('./partials/head.ejs') %>
   <body>
-    <%- include('partials/header.ejs') %>
+    <%- include('./partials/header.ejs') %>
     <div class="title">
       <h1>ECE199R: Web App Project</h1>
     </div>
     <main>
       <div class="hero">
-        <img id="mapua-logo" src="mapua.png" alt="mapua-logo" />
+        <img id="mapua-logo" src="/img/mapua.png" alt="mapua-logo" />
         <h1>Item Receipt Confirmation</h1>
       </div>
     </main>
-    <%- include('partials/footer.ejs') %>
+    <%- include('./partials/footer.ejs') %>
   </body>
 </html>
