--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,8 +2,8 @@
   <div class="nav-links">
     <a href="/" class="mapua">Map&uacutea University</a>
     <ul class="links-container">
-      <li><a href="/signup">Sign Up</a></li>
-      <li><a href="/login">Login</a></li>
+      <li><a href="/users/register">Register</a></li>
+      <li><a href="/users/login">Login</a></li>
     </ul>
   </div>
 </nav>
