--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -11,7 +11,7 @@
       </div>
     </nav>
     <div class="forms-title">
-      <h1>User: <%= user%></h1>
+      <h1>User: "username"</h1>
     </div>
     <main>
       <form action="/submit" method="post">
