--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,12 +4,13 @@
   <body>
     <%- include('./partials/header.ejs') %>
     <div class="forms-title">
-      <h1>Item Receipt Confirmation</h1>
+      <h1>User Registration</h1>
     </div>
     <main>
-      <form action="/users/signup" method="post">
+      <form>
         <div class="forms-container">
           <h1>Please enter the following information:</h1>
+          <div class="formError"></div>
           <div class="flex">
             <label for="firstname"><b>Firstname:</b></label>
             <input
@@ -62,10 +63,40 @@
               required
             />
           </div>
-          <button type="submit">Sign Up</button>
+          <button type="submit">Submit</button>
         </div>
       </form>
     </main>
     <%- include('./partials/footer.ejs') %>
   </body>
+  <script>
+    const form = document.querySelector("form");
+    const formError = document.querySelector(".formError");
+
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+
+      const firstname = form.firstname.value;
+      const lastname = form.lastname.value;
+      const username = form.username.value;
+      const password = form.password.value;
+      const confirmPassword = form.confirmPassword.value;
+
+      try {
+        if (password === confirmPassword) {
+          const res = await fetch("/users/register", {
+            method: "post",
+            body: JSON.stringify({ firstname, lastname, username, password }),
+            headers: { "Content-Type": "application/json" },
+          });
+          const data = await res.json();
+          location.assign("/users/login");
+        } else {
+          formError.textContent = "Passwords do not match.";
+        }
+      } catch (err) {
+        console.log(err);
+      }
+    });
+  </script>
 </html>
