--- a/public/styles.css
+++ b/public/styles.css
@@ -157,7 +157,8 @@ form {
 }
 
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+input[type="number"] {
   width: 100%;
   padding: 10px 0 10px 5px;
   margin: 8px 0 8px 8px;
