--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -31,7 +31,7 @@
             <label for="unitcount"><b>Count:</b></label>
             <input
               id="unitcount"
-              type="text"
+              type="number"
               placeholder="Unit Count"
               name="unitcount"
               required
