added some mobile responsiveness

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -7,7 +7,7 @@
       <h1>Oops! Something Went Wrong :(</h1>
     </div>
     <main>
-      <h1><%= msg %></h1>
+      <div class="errormsg"><%= msg %></div>
     </main>
     <%- include('./partials/footer.ejs') %>
   </body>
