--- a/public/styles.css
+++ b/public/styles.css
@@ -107,6 +107,11 @@ main {
   width: 30%;
 }
 
+.errormsg {
+  text-align: center;
+  font-size: 4rem;
+}
+
 /* FORMS */
 
 form {
@@ -215,4 +220,28 @@ footer {
 
 .footer-links :hover {
   fill: #fcc403;
+}
+
+@media screen and (max-width: 800px) {
+  .hero img {
+    display: none;
+  }
+  .hero h1 {
+    color: #94192f;
+    font-size: 3rem;
+    font-weight: 500;
+    text-align: center;
+  }
+  .forms-title h1 {
+    font-family: Roboto Slab;
+    font-size: 1rem;
+    width: 80%;
+    margin: auto;
+    color: white;
+    text-align: center;
+  }
+  .errormsg {
+    text-align: center;
+    font-size: 2.8rem;
+  }
 }
