--- a/public/styles.css
+++ b/public/styles.css
@@ -222,26 +222,19 @@ footer {
   fill: #fcc403;
 }
 
+/* MEDIA QUERIES */
+
 @media screen and (max-width: 800px) {
   .hero img {
     display: none;
   }
   .hero h1 {
-    color: #94192f;
     font-size: 3rem;
-    font-weight: 500;
-    text-align: center;
   }
   .forms-title h1 {
-    font-family: Roboto Slab;
-    font-size: 1rem;
-    width: 80%;
-    margin: auto;
-    color: white;
-    text-align: center;
+    font-size: 1.2rem;
   }
   .errormsg {
-    text-align: center;
     font-size: 2.8rem;
   }
 }
