added min number of items

--- a/views/items.ejs
+++ b/views/items.ejs
@@ -23,6 +23,7 @@
             <input
               id="itemcount"
               type="number"
+              min="1"
               placeholder="Numbers of items"
               name="itemcount"
               required
